# uwu-admin

./: .dockerignore  .env.example  Cargo.toml  README.md  docker-compose.example.yml
.github/workflows/: release.yml  tag-on-merge.yml  test.yml  update-command-tree.yml
api/: .env.example  Cargo.toml
api/src/: auth.rs  commands.rs  crypto.rs  db.rs  entity.rs  error.rs  handlers.rs  integration_tests.rs  main.rs  matrix.rs  middleware.rs  response.rs  state.rs  validation.rs
api/src/entity/: admin_user.rs  mod.rs  refresh_token.rs  server.rs  setting.rs
api/src/handlers/: auth.rs  middleware.rs  mod.rs  servers.rs  settings.rs
api/src/integration_tests/: auth.rs  commands.rs  csrf.rs  jwt.rs  logout.rs  mod.rs  refresh.rs  servers.rs  service_unavailable.rs  settings.rs  validation.rs
api/src/routes/: auth.rs  mod.rs  servers.rs  settings.rs
api/src/services/: commands.rs  crypto.rs  db.rs  matrix.rs  mod.rs  response.rs  validation.rs
containers/: README.md
containers/docker/: Dockerfile  README.md  entrypoint.sh  nginx.conf
containers/quadlet/: README.md  uwu-admin.container
docker/: Dockerfile
scripts/: quadlet-dev.sh  release.sh  test.sh  update-command-tree.sh
shared/: command-tree.json
web/: .env.example  .gitignore  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/e2e/: auth.spec.ts  console.spec.ts  copy-to-clipboard.spec.ts  fixtures.ts  global-setup.ts  helpers.ts  room-actions.spec.ts  server-management.spec.ts  settings.spec.ts  (+2 more)
(+60 files in other folders)
