[package]
name = "uwu-admin-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.21.0", features = ["v4"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
