[package]
name = "uwu-admin-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.21.0", features = ["v4"] }
sea-orm = { version = "1.1.19", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
chrono = "0.4"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.9"
dotenvy = "0.15.7"
tower = { version = "0.5.3", features = ["limit", "buffer"] }
tower_governor = "0.8.0"
regex = "1"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
serial_test = "3.4.0"
